# lynx-turbo

./: .aider.conf.yml  .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: codspeed.yml
apps/Lynx-frontend/: README.md  package.json
apps/data-lynx/: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
apps/data-lynx/.codspeed/: results_1739537437779.json  results_1739537514935.json
apps/data-lynx/eval/deepeval/: .deepeval  .deepeval_telemetry.txt  experiment_llm.py
apps/data-lynx/eval/promptfoo/: promptfooconfig.yaml  provider.js  provider.py  provider.sh
apps/data-lynx/src/astra_db/: astra_db.py  connect.py  main.py  session_manager.py
apps/docs/: README-01JKG172T2VJSXDMVGDJ8RV48V.md  README.md  components.mdx  eslint.config.js  next.config.mjs  package.json  tsconfig.json
apps/kwg/: README.md  package.json  pyproject.toml
apps/kwg-agi/: package.json
apps/lynx-agent/: README-01JKG172T2VJSXDMVGDJ8RV48V.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/lynx-core/: README.md  connect.py  package.json  pyproject.toml  requirements.txt
apps/web/: README-01JKG172T2VJSXDMVGDJ8RV48V.md  package.json  pnpm-lock.yaml  tsconfig.json
project_documentation/: one-pager-genratr.md  prd-genratr.md  repo_overview.md  system-architecture-notes.md  tech-stack.md
project_documentation/development/: implementation-poc.md  llm-kg-2.md  llm-kg.md
project_documentation/project-management/: prd-genratr.md  prd-lynx.md
project_documentation/system-design/: crm-sys-arch.md  groq_models.md  (+4 more)
(+21 files in other folders)
